Fix repro structure

--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
   "name": "zudoku-repro",
-  "private": true,
-  "version": "0.0.1",
   "description": "Minimal reproduction for Zudoku integration using dummy API specs",
+  "version": "0.1.0",
+  "type": "module",
+  "private": true,
   "workspaces": [
     "docs/*",
     "specs/*"
   ],
   "scripts": {
-    "docs:dev": "npm run --workspace=docs dev",
-    "docs:build": "npm run --workspace=docs build"
+    "docs:dev": "zudoku dev",
+    "docs:build": "zudoku build",
+    "docs:preview": "zudoku preview"
+  },
+  "dependencies": {
+    "react": ">=19.0.0",
+    "react-dom": ">=19.0.0",
+    "zudoku": "0.60.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "typescript": "^5"
   }
 }
